--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header class="header">
         <h1>
-            <a href="#main">한유정 포트폴리오 2024</a>
+            <a href="#main">한유정 포트폴리오 2023</a>
         </h1>
     </header>
 
@@ -39,17 +39,25 @@
             <li><a href="#portfolio03">menu04</a></li>
             <li><a href="#portfolio04">menu05</a></li>
             <li><a href="#portfolio05">menu06</a></li>
+            <li><a href="#profile">profile</a></li>
         </ul>
     </nav>
 
+    <aside>
+        HANYUJEONG PORTFOLIO
+    </aside>
 
 
     <main class="main">
         <div class="section">
-            <div class="inner">
-                <div class="slogan">
-                    This is a Slogan.
+            <div class="m_inner">
+                <div class="circle">
                 </div>
+                <div class="slogan">
+                    <div class="sty">KEEP IT SIMPLE </div>
+                    <div class="bold">BUT SIGNIFICANT.</div>
+                </div>
+
             </div>
         </div>
         <div class="section">
@@ -71,6 +79,43 @@
         <div class="section">portfolio03</div>
         <div class="section">portfolio04</div>
         <div class="section">portfolio05</div>
+        <div class="section">
+            <div class="profile">
+                <h2>PROFILE</h2>
+                <div class="intro">
+                    <ul>
+                        <li>HANYUJEONG</li>
+                        Let me introduce myself~ I am good and kind also <br />
+                        I am really zzang in the world.</li>
+                    </ul>
+                </div>
+                <div class="career">
+                    <div class="category">
+                        SKILL
+                    </div>
+                    <ul class="elements">
+                        <li>HTML / CSS</li>
+                        <li>JAVA SCRIPT</li>
+                        <li>JQUERY</li>
+                        <li>그누보드</li>
+                        <li>REACT.JS</li>
+
+                    </ul>
+                </div>
+                <div class="contact">
+                    <div class="category">
+                        CONTACT
+                    </div>
+                    <ul class="elements">
+                        <li>E MAIL</li>
+                        <li>KAKAOTALK</li>
+                        <li>GITHUB</li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
     </main>
     <footer class="footer">
         &copy; hanyujeong 2023 portfolio.
@@ -84,6 +129,7 @@
             <li><a href="#portfolio03">menu04</a></li>
             <li><a href="#portfolio04">menu05</a></li>
             <li><a href="#portfolio05">menu06</a></li>
+            <li><a href="#profile">profile</a></li>
         </ul>
     </div>
 
