--- a/index.html
+++ b/index.html
@@ -55,30 +55,196 @@
                 </div>
                 <div class="slogan">
                     <div class="sty">KEEP IT SIMPLE </div>
-                    <div class="bold">BUT SIGNIFICANT.</div>
+                    <div class="bold">BUT SIGNIFICANT</div>
                 </div>
 
             </div>
         </div>
-        <div class="section">
+        <div class="section section01">
             <div class="inner">
                 <div class="content">
                     <div class="case">
-                        <img src="./images/03design2.png" alt="">
+                        <img src="./images/fingersuit_design.png" alt="">
                     </div>
                 </div>
-                <div class="description">description</div>
+                <div class="description">
+                    <strong>PROJECT</strong>
+                    <h2>FINGER SUIT <span>핑거수트</span></h2>
+                    <div class="txt_row">
+                        <dl>
+                            <dt>Type</dt>
+                            <dd>반응형 웹디자인</dd>
+                            <dt>Tool</dt>
+                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dt>Font</dt>
+                            <dd>Noto Sans KR</dd>
+                            <dt>Color</dt>
+                            <dd>
+                                <span class="color c01"></span>
+                                <span class="color c02"></span>
+                                <span class="color c03"></span>
+                                <span class="color c04"></span>
+                            </dd>
+                            <dt>work</dt>
+                            <dd>개인작업 100%</dd>
+                        </dl>
+                    </div>
+                    <div class="btn ">
+                        <a href="">Web Page</a>
+                        <a href="">Style Guide</a>
+                    </div>
+
+                </div>
             </div>
         </div>
-        <div class="section">
+        <div class="section section02">
             <div class="inner">
-                <div class="content">content</div>
-                <div class="description">description</div>
+                <div class="content">
+                    <div class="case">
+                        <img src="./images/creverse.png" alt="">
+                    </div>
+                </div>
+                <div class="description">
+                    <strong>PROJECT</strong>
+                    <h2>CREVERSE <span>크레버스 - 융합사고력 플랫폼</span></h2>
+                    <div class="txt_row">
+                        <dl>
+                            <dt>Type</dt>
+                            <dd>반응형 웹디자인</dd>
+                            <dt>Tool</dt>
+                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dt>Font</dt>
+                            <dd>Noto Sans KR</dd>
+                            <dt>Color</dt>
+                            <dd>
+                                <span class="color c01"></span>
+                                <span class="color c02"></span>
+                                <span class="color c03"></span>
+                                <span class="color c04"></span>
+                            </dd>
+                            <dt>work</dt>
+                            <dd>개인작업 100%</dd>
+                        </dl>
+                    </div>
+                    <div class="btn ">
+                        <a href="">Web Page</a>
+                        <a href="">Style Guide</a>
+                    </div>
+
+                </div>
             </div>
         </div>
-        <div class="section">portfolio03</div>
-        <div class="section">portfolio04</div>
-        <div class="section">portfolio05</div>
+        <div class="section section03">
+            <div class="inner">
+                <div class="content">
+                    <div class="case">
+                        <img src="./images/etude.png" alt="">
+                    </div>
+                </div>
+                <div class="description">
+                    <strong>PROJECT</strong>
+                    <h2>ETUDE <span>에뛰드하우스 - 아모레퍼시픽</span></h2>
+                    <div class="txt_row">
+                        <dl>
+                            <dt>Type</dt>
+                            <dd>반응형 웹디자인</dd>
+                            <dt>Tool</dt>
+                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dt>Font</dt>
+                            <dd>Noto Sans KR</dd>
+                            <dt>Color</dt>
+                            <dd>
+                                <span class="color c01"></span>
+                                <span class="color c02"></span>
+                                <span class="color c03"></span>
+                                <span class="color c04"></span>
+                            </dd>
+                            <dt>work</dt>
+                            <dd>개인작업 100%</dd>
+                        </dl>
+                    </div>
+                    <div class="btn ">
+                        <a href="">Web Page</a>
+                        <a href="">Style Guide</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="section section04">
+            <div class="inner">
+                <div class="content">
+                    <div class="case">
+                        <img src="./images/eggdrop.png" alt="">
+                    </div>
+                </div>
+                <div class="description">
+                    <strong>PROJECT</strong>
+                    <h2>EGGDROP <span>에그드랍 홈페이지</span></h2>
+                    <div class="txt_row">
+                        <dl>
+                            <dt>Type</dt>
+                            <dd>반응형 웹디자인</dd>
+                            <dt>Tool</dt>
+                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dt>Font</dt>
+                            <dd>Noto Sans KR</dd>
+                            <dt>Color</dt>
+                            <dd>
+                                <span class="color c01"></span>
+                                <span class="color c02"></span>
+                                <span class="color c03"></span>
+                                <span class="color c04"></span>
+                            </dd>
+                            <dt>work</dt>
+                            <dd>개인작업 100%</dd>
+                        </dl>
+                    </div>
+                    <div class="btn ">
+                        <a href="">Web Page</a>
+                        <a href="">Style Guide</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="section section05">
+            <div class="inner">
+                <div class="content">
+                    <div class="case">
+                        <img src="./images/spao.png" alt="">
+                    </div>
+                </div>
+                <div class="description">
+                    <strong>PROJECT</strong>
+                    <h2>SPAO <span>SPA 대표 브랜드 스파오 공식몰</span></h2>
+                    <div class="txt_row">
+                        <dl>
+                            <dt>Type</dt>
+                            <dd>반응형 웹디자인</dd>
+                            <dt>Tool</dt>
+                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dt>Font</dt>
+                            <dd>Noto Sans KR</dd>
+                            <dt>Color</dt>
+                            <dd>
+                                <span class="color c01"></span>
+                                <span class="color c02"></span>
+                                <span class="color c03"></span>
+                                <span class="color c04"></span>
+                            </dd>
+                            <dt>work</dt>
+                            <dd>개인작업 100%</dd>
+                        </dl>
+                    </div>
+                    <div class="btn ">
+                        <a href="">Web Page</a>
+                        <a href="">Style Guide</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
         <div class="section">
             <div class="profile">
                 <h2>PROFILE</h2>
@@ -123,13 +289,13 @@
 
     <div class="cover">
         <ul>
-            <li><a href="#main">menu01</a></li>
-            <li><a href="#portfolio01">menu02</a></li>
-            <li><a href="#portfolio02">menu03</a></li>
-            <li><a href="#portfolio03">menu04</a></li>
-            <li><a href="#portfolio04">menu05</a></li>
-            <li><a href="#portfolio05">menu06</a></li>
-            <li><a href="#profile">profile</a></li>
+            <li><a href="#main">INTRO</a></li>
+            <li><a href="#portfolio01">PROJECT01 - Finger Suit</a></li>
+            <li><a href="#portfolio02">PROJECT02 - CREVERSE</a></li>
+            <li><a href="#portfolio03">PROJECT03 - ETUDE</a></li>
+            <li><a href="#portfolio04">PROJECT04 - EGGDROP</a></li>
+            <li><a href="#portfolio05">PROJECT05 - SPAO</a></li>
+            <li><a href="#profile">PROFILE</a></li>
         </ul>
     </div>
 
