--- a/index.html
+++ b/index.html
@@ -51,25 +51,28 @@
     <main class="main">
         <div class="section">
             <div class="m_inner">
-                <div class="circle">
-                </div>
-                <div class="slogan">
-                    <div class="sty">KEEP IT SIMPLE </div>
-                    <div class="bold">BUT SIGNIFICANT</div>
-                </div>
+
+                <div class="circle"></div>
 
             </div>
+            <div class="slogan">
+                <div class="sty">KEEP IT SIMPLE </div>
+                <div class="bold">BUT SIGNIFICANT</div>
+            </div>
+
+        </div>
         </div>
         <div class="section section01">
+            <h2 class="bg">PROJECT 01</h2>
             <div class="inner">
                 <div class="content">
                     <div class="case">
-                        <img src="./images/fingersuit_design.png" alt="">
+                        <img src="./images/mockup_devices_fingersuit.png" alt="">
                     </div>
                 </div>
                 <div class="description">
                     <strong>PROJECT</strong>
-                    <h2>FINGER SUIT <span>핑거수트</span></h2>
+                    <h2><img src="./images/logo_fingersuit.svg" alt=""> <span>핑거수트</span></h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
@@ -101,12 +104,12 @@
             <div class="inner">
                 <div class="content">
                     <div class="case">
-                        <img src="./images/creverse.png" alt="">
+                        <img src="./images/sample_img_ex.png" alt="">
                     </div>
                 </div>
                 <div class="description">
                     <strong>PROJECT</strong>
-                    <h2>CREVERSE <span>크레버스 - 융합사고력 플랫폼</span></h2>
+                    <h2><img src="./images/logo_creverse.svg" alt=""> <span>크레버스 - 융합사고력 플랫폼</span></h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
@@ -143,7 +146,7 @@
                 </div>
                 <div class="description">
                     <strong>PROJECT</strong>
-                    <h2>ETUDE <span>에뛰드하우스 - 아모레퍼시픽</span></h2>
+                    <h2><img src="./images/logo_etude.png" alt=""> <span>에뛰드하우스 - 아모레퍼시픽</span></h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
@@ -154,10 +157,10 @@
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
                             <dd>
-                                <span class="color c01"></span>
-                                <span class="color c02"></span>
-                                <span class="color c03"></span>
-                                <span class="color c04"></span>
+                                <span class="color c31"></span>
+                                <span class="color c32"></span>
+                                <span class="color c33"></span>
+                                <span class="color c34"></span>
                             </dd>
                             <dt>work</dt>
                             <dd>개인작업 100%</dd>
@@ -180,7 +183,7 @@
                 </div>
                 <div class="description">
                     <strong>PROJECT</strong>
-                    <h2>EGGDROP <span>에그드랍 홈페이지</span></h2>
+                    <h2> <img src="./images/logo_eggdrop.png" alt=""> <span>에그드랍 홈페이지</span></h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
@@ -217,7 +220,7 @@
                 </div>
                 <div class="description">
                     <strong>PROJECT</strong>
-                    <h2>SPAO <span>SPA 대표 브랜드 스파오 공식몰</span></h2>
+                    <h2><img src="./images/logo_spao.png" alt=""> <span>SPA 대표 브랜드 스파오 공식몰</span></h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
