--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
         <div class="section">
             <div class="m_inner">
 
-                <div class="circle"></div>
+
+
+                <div class="circle">
+                    <div class="text"></div>
+                </div>
+
 
             </div>
             <div class="slogan">
@@ -101,6 +106,7 @@
             </div>
         </div>
         <div class="section section02">
+            <h2 class="bg">PROJECT 02</h2>
             <div class="inner">
                 <div class="content">
                     <div class="case">
@@ -138,6 +144,7 @@
             </div>
         </div>
         <div class="section section03">
+            <h2 class="bg">PROJECT 03</h2>
             <div class="inner">
                 <div class="content">
                     <div class="case">
@@ -311,6 +318,51 @@
     <div class="toTop">
         <a href="#main">UP</a>
     </div>
+
+
+
+    <script>
+        const C_TXT = document.querySelector('.circle');
+        const I_TXT = document.querySelector('.text');
+        const TXT = 'Lorem^^*ipsumdolorsitamet';
+
+
+        const TC = t => {
+            const n = t.length;
+            const r = [...t].map(it => `<span>${it}</span>`).join('');
+
+            I_TXT.innerHTML = r;
+            const SPAN = document.querySelectorAll('.text span');
+            //console.log(t, n, r, SPAN);
+            SPAN.forEach((it, idx) => {
+                it.style.cssText = `
+    position: absolute;
+    top:0;
+    left: 50%;
+    transform: translate(-50%,0) rotate(${360 / n * idx}deg);
+    transform-origin: center bottom;
+    height: 50%;
+    width: 20px;
+    font-size: 40px;
+    font-weight: bolder;
+    text-transform: uppercase;
+    color : #ddd;
+    `
+            });
+        }
+
+        TC(TXT);
+
+        const RT = e => {
+            let SCT = window.scrollY;
+            //console.log(e, SCT);
+            C_TXT.style.cssText = `
+transform: translate(-50%, -50%) rotate(${SCT / 5}deg);
+`
+        }
+        window.addEventListener('scroll', RT);
+
+    </script>
 </body>
 
 </html>
