--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header class="header">
         <h1>
-            <a href="#main">한유정 포트폴리오 2023</a>
+            <a href="#main">HANYUJEONG PORTFOLIO</a>
         </h1>
     </header>
 
@@ -44,31 +44,31 @@
     </nav>
 
     <aside>
-        HANYUJEONG PORTFOLIO..
+
+
     </aside>
 
 
     <main class="main">
         <div class="section">
-            <div class="m_inner">
-
-
-
+            <div class="container">
+                <div class="slogan">
+                    <div class="sty">KEEP IT SIMPLE </div>
+                    <div class="bold">BUT SIGNIFICANT</div>
+                </div>
+                <div class="scroll">
+                    <a href="#portfolio01">SCROLL DOWN</a>
+                </div>
+            </div>
+            <!-- 
                 <div class="circle">
                     <div class="text"></div>
-                </div>
+                </div> -->
 
-
-            </div>
-            <div class="slogan">
-                <div class="sty">KEEP IT SIMPLE </div>
-                <div class="bold">BUT SIGNIFICANT</div>
-            </div>
 
         </div>
         </div>
         <div class="section section01">
-            <h2 class="bg">PROJECT 01</h2>
             <div class="inner">
                 <div class="content">
                     <div class="case">
@@ -146,9 +146,10 @@
         <div class="section section03">
             <h2 class="bg">PROJECT 03</h2>
             <div class="inner">
+
                 <div class="content">
                     <div class="case">
-                        <img src="./images/etude.png" alt="">
+                        <img src="./images/mockup_etude.png" alt="">
                     </div>
                 </div>
                 <div class="description">
@@ -169,7 +170,7 @@
                                 <span class="color c33"></span>
                                 <span class="color c34"></span>
                             </dd>
-                            <dt>work</dt>
+                            <dt>Work</dt>
                             <dd>개인작업 100%</dd>
                         </dl>
                     </div>
@@ -185,7 +186,7 @@
             <div class="inner">
                 <div class="content">
                     <div class="case">
-                        <img src="./images/eggdrop.png" alt="">
+                        <img src="./images/mockup_eggdrop.png" alt="">
                     </div>
                 </div>
                 <div class="description">
@@ -206,7 +207,7 @@
                                 <span class="color c03"></span>
                                 <span class="color c04"></span>
                             </dd>
-                            <dt>work</dt>
+                            <dt>Work</dt>
                             <dd>개인작업 100%</dd>
                         </dl>
                     </div>
@@ -222,7 +223,7 @@
             <div class="inner">
                 <div class="content">
                     <div class="case">
-                        <img src="./images/spao.png" alt="">
+                        <img src="./images/mockup_spao.png" alt="">
                     </div>
                 </div>
                 <div class="description">
@@ -243,7 +244,7 @@
                                 <span class="color c03"></span>
                                 <span class="color c04"></span>
                             </dd>
-                            <dt>work</dt>
+                            <dt>Work</dt>
                             <dd>개인작업 100%</dd>
                         </dl>
                     </div>
@@ -259,10 +260,13 @@
             <div class="profile">
                 <h2>PROFILE</h2>
                 <div class="intro">
-                    <ul>
+                    <div class="category">
+                        한유정
+                    </div>
+                    <ul class="elements">
                         <li>HANYUJEONG</li>
-                        Let me introduce myself~ I am good and kind also <br />
-                        I am really zzang in the world.</li>
+                        <li>1993.01.16</li>
+                        <li>프론트엔드 개발자 NCS 과정 수료</li>
                     </ul>
                 </div>
                 <div class="career">
@@ -273,7 +277,7 @@
                         <li>HTML / CSS</li>
                         <li>JAVA SCRIPT</li>
                         <li>JQUERY</li>
-                        <li>그누보드</li>
+                        <li>CMS - 그누보드</li>
                         <li>REACT.JS</li>
 
                     </ul>
@@ -300,7 +304,7 @@
     <div class="cover">
         <ul>
             <li><a href="#main">INTRO</a></li>
-            <li><a href="#portfolio01">PROJECT01 - Finger Suit</a></li>
+            <li><a href="#portfolio01">PROJECT01 - FINGER SUIT</a></li>
             <li><a href="#portfolio02">PROJECT02 - CREVERSE</a></li>
             <li><a href="#portfolio03">PROJECT03 - ETUDE</a></li>
             <li><a href="#portfolio04">PROJECT04 - EGGDROP</a></li>
