--- a/index.html
+++ b/index.html
@@ -43,11 +43,6 @@
         </ul>
     </nav>
 
-    <aside>
-
-
-    </aside>
-
 
     <main class="main">
         <div class="section">
@@ -60,19 +55,15 @@
                     <a href="#portfolio01">SCROLL DOWN</a>
                 </div>
             </div>
-            <!-- 
-                <div class="circle">
-                    <div class="text"></div>
-                </div> -->
-
-
         </div>
-        </div>
+
         <div class="section section01">
             <div class="inner">
-                <div class="content">
-                    <div class="case">
-                        <img src="./images/mockup_devices_fingersuit.png" alt="">
+                <div class="content_bg">
+                    <div class="content">
+                        <div class="case">
+                            <a href=""><img src="./images/fingersuit_design.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -81,9 +72,9 @@
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>반응형 웹디자인</dd>
+                            <dd>Standard Web</dd>
                             <dt>Tool</dt>
-                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dd>Vanilla Javascript, Swiper.js</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -106,11 +97,13 @@
             </div>
         </div>
         <div class="section section02">
-            <h2 class="bg">PROJECT 02</h2>
             <div class="inner">
-                <div class="content">
-                    <div class="case">
-                        <img src="./images/sample_img_ex.png" alt="">
+
+                <div class="content_bg">
+                    <div class="content">
+                        <div class="case">
+                            <a href=""><img src="./images/creverse.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -119,9 +112,9 @@
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>반응형 웹디자인</dd>
+                            <dd>Responsive Web</dd>
                             <dt>Tool</dt>
-                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dd>React.js, Slick.js</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -144,12 +137,13 @@
             </div>
         </div>
         <div class="section section03">
-            <h2 class="bg">PROJECT 03</h2>
             <div class="inner">
 
-                <div class="content">
-                    <div class="case">
-                        <img src="./images/mockup_etude.png" alt="">
+                <div class="content_bg">
+                    <div class="content">
+                        <div class="case">
+                            <a href=""><img src="./images/etude.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -158,9 +152,9 @@
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>반응형 웹디자인</dd>
+                            <dd>Responsive Web</dd>
                             <dt>Tool</dt>
-                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dd>HTML5, CSS3, Javascript(JQuery)</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -184,9 +178,11 @@
         </div>
         <div class="section section04">
             <div class="inner">
-                <div class="content">
-                    <div class="case">
-                        <img src="./images/mockup_eggdrop.png" alt="">
+                <div class="content_bg">
+                    <div class="content">
+                        <div class="case">
+                            <a href=""><img src="./images/eggdrop.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -195,9 +191,9 @@
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>반응형 웹디자인</dd>
+                            <dd>Standard Web - Multipage</dd>
                             <dt>Tool</dt>
-                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dd>CMS(그누보드), Javascript(JQuery)</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -221,9 +217,12 @@
         </div>
         <div class="section section05">
             <div class="inner">
-                <div class="content">
-                    <div class="case">
-                        <img src="./images/mockup_spao.png" alt="">
+
+                <div class="content_bg">
+                    <div class="content">
+                        <div class="case">
+                            <a href=""><img src="./images/spao.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -232,9 +231,9 @@
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>반응형 웹디자인</dd>
+                            <dd>Responsive Web</dd>
                             <dt>Tool</dt>
-                            <dd>그누보드, Vanilla JS, Swiper.js</dd>
+                            <dd>CMS(그누보드), Javascript(JQuery)</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -266,7 +265,9 @@
                     <ul class="elements">
                         <li>HANYUJEONG</li>
                         <li>1993.01.16</li>
+                        <li>신라대학교 영어교육과 졸업</li>
                         <li>프론트엔드 개발자 NCS 과정 수료</li>
+                        <li>TOEIC : 950 / TOEIC SPEAKING : 180</li>
                     </ul>
                 </div>
                 <div class="career">
@@ -277,9 +278,8 @@
                         <li>HTML / CSS</li>
                         <li>JAVA SCRIPT</li>
                         <li>JQUERY</li>
-                        <li>CMS - 그누보드</li>
+                        <li>CMS - 그누보드,영카트</li>
                         <li>REACT.JS</li>
-
                     </ul>
                 </div>
                 <div class="contact">
