--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="description">
-                    <strong>PROJECT</strong>
+                    <strong>PROJECT 01</strong>
                     <h2><img src="./images/logo_fingersuit.svg" alt=""> <span>핑거수트</span></h2>
                     <div class="txt_row">
                         <dl>
@@ -89,8 +89,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="">Web Page</a>
-                        <a href="">Style Guide</a>
+                        <a href="">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -105,16 +104,23 @@
                             <a href=""><img src="./images/creverse.png" alt=""></a>
                         </div>
                     </div>
+                    <div class="mo_bg">
+                        <div class="mo_content">
+                            <div class="mo_case">
+                                <a href=""><img src="./images/creverse_mo.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="description">
-                    <strong>PROJECT</strong>
+                    <strong>PROJECT 02</strong>
                     <h2><img src="./images/logo_creverse.svg" alt=""> <span>크레버스 - 융합사고력 플랫폼</span></h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
                             <dd>Responsive Web</dd>
                             <dt>Tool</dt>
-                            <dd>React.js, Slick.js</dd>
+                            <dd>React.js, Javascript(JQuery)</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -129,8 +135,7 @@
                         </dl>
                     </div>
                     <div class="btn">
-                        <a href="">Web Page</a>
-                        <a href="">Style Guide</a>
+                        <a href="">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -145,9 +150,16 @@
                             <a href=""><img src="./images/etude.png" alt=""></a>
                         </div>
                     </div>
+                    <div class="mo_bg">
+                        <div class="mo_content">
+                            <div class="mo_case">
+                                <a href=""><img src="./images/etude_mo.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="description">
-                    <strong>PROJECT</strong>
+                    <strong>PROJECT 03</strong>
                     <h2><img src="./images/logo_etude.png" alt=""> <span>에뛰드하우스 - 아모레퍼시픽</span></h2>
                     <div class="txt_row">
                         <dl>
@@ -169,8 +181,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="">Web Page</a>
-                        <a href="">Style Guide</a>
+                        <a href="">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -186,7 +197,7 @@
                     </div>
                 </div>
                 <div class="description">
-                    <strong>PROJECT</strong>
+                    <strong>PROJECT 04</strong>
                     <h2> <img src="./images/logo_eggdrop.png" alt=""> <span>에그드랍 홈페이지</span></h2>
                     <div class="txt_row">
                         <dl>
@@ -208,8 +219,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="">Web Page</a>
-                        <a href="">Style Guide</a>
+                        <a href="">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -224,9 +234,16 @@
                             <a href=""><img src="./images/spao.png" alt=""></a>
                         </div>
                     </div>
+                    <div class="mo_bg">
+                        <div class="mo_content">
+                            <div class="mo_case">
+                                <a href=""><img src="./images/spao_mo.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="description">
-                    <strong>PROJECT</strong>
+                    <strong>PROJECT 05</strong>
                     <h2><img src="./images/logo_spao.png" alt=""> <span>SPA 대표 브랜드 스파오 공식몰</span></h2>
                     <div class="txt_row">
                         <dl>
@@ -248,8 +265,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="">Web Page</a>
-                        <a href="">Style Guide</a>
+                        <a href="">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -267,7 +283,6 @@
                         <li>1993.01.16</li>
                         <li>신라대학교 영어교육과 졸업</li>
                         <li>프론트엔드 개발자 NCS 과정 수료</li>
-                        <li>TOEIC : 950 / TOEIC SPEAKING : 180</li>
                     </ul>
                 </div>
                 <div class="career">
@@ -323,50 +338,6 @@
         <a href="#main">UP</a>
     </div>
 
-
-
-    <script>
-        const C_TXT = document.querySelector('.circle');
-        const I_TXT = document.querySelector('.text');
-        const TXT = 'Lorem^^*ipsumdolorsitamet';
-
-
-        const TC = t => {
-            const n = t.length;
-            const r = [...t].map(it => `<span>${it}</span>`).join('');
-
-            I_TXT.innerHTML = r;
-            const SPAN = document.querySelectorAll('.text span');
-            //console.log(t, n, r, SPAN);
-            SPAN.forEach((it, idx) => {
-                it.style.cssText = `
-    position: absolute;
-    top:0;
-    left: 50%;
-    transform: translate(-50%,0) rotate(${360 / n * idx}deg);
-    transform-origin: center bottom;
-    height: 50%;
-    width: 20px;
-    font-size: 40px;
-    font-weight: bolder;
-    text-transform: uppercase;
-    color : #ddd;
-    `
-            });
-        }
-
-        TC(TXT);
-
-        const RT = e => {
-            let SCT = window.scrollY;
-            //console.log(e, SCT);
-            C_TXT.style.cssText = `
-transform: translate(-50%, -50%) rotate(${SCT / 5}deg);
-`
-        }
-        window.addEventListener('scroll', RT);
-
-    </script>
 </body>
 
 </html>
