--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/jquery.fullpage.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="./css/portfolio.css">
+
 
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/jquery.fullpage.min.js"></script>
@@ -89,7 +91,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="">VIEW ON WEB</a>
+                        <a href="https://emilyyujeong.github.io/fingersuit">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -135,7 +137,7 @@
                         </dl>
                     </div>
                     <div class="btn">
-                        <a href="">VIEW ON WEB</a>
+                        <a href="https://emilyyujeong.github.io/react_test01/">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -180,8 +182,8 @@
                             <dd>개인작업 100%</dd>
                         </dl>
                     </div>
-                    <div class="btn ">
-                        <a href="">VIEW ON WEB</a>
+                    <div class="btn">
+                        <a href="https://emilyyujeong.github.io/re_etude/">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -204,7 +206,7 @@
                             <dt>Type</dt>
                             <dd>Standard Web - Multipage</dd>
                             <dt>Tool</dt>
-                            <dd>CMS(그누보드), Javascript(JQuery)</dd>
+                            <dd>CMS(그누보드), Javascript(JQuery), 카카오 api 활용</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -219,7 +221,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="">VIEW ON WEB</a>
+                        <a href="http://onewaytomars.dothome.co.kr/">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -265,7 +267,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="">VIEW ON WEB</a>
+                        <a href="http://emilyyujeong.dothome.co.kr/?device=pc">VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -290,11 +292,11 @@
                         SKILL
                     </div>
                     <ul class="elements">
-                        <li>HTML / CSS</li>
-                        <li>JAVA SCRIPT</li>
-                        <li>JQUERY</li>
-                        <li>CMS - 그누보드,영카트</li>
+                        <li>HTML5 / CSS3</li>
+                        <li>JAVA SCRIPT / JQUERY</li>
                         <li>REACT.JS</li>
+                        <li>CMS - 그누보드,영카트</li>
+                        <li>Photoshop / Figma</li>
                     </ul>
                 </div>
                 <div class="contact">
@@ -302,9 +304,10 @@
                         CONTACT
                     </div>
                     <ul class="elements">
-                        <li>E MAIL</li>
-                        <li>KAKAOTALK</li>
-                        <li>GITHUB</li>
+                        <li><i class="xi-gmail"></i> emilyyujeong@gmail.com</li>
+                        <li><i class="xi-mobile"></i> 010-4121-9139</li>
+                        <li><i class="xi-kakaotalk"></i> @absolutelyfully</li>
+                        <li><i class="xi-github"></i> https://github.com/emilyyujeong</li>
                     </ul>
                 </div>
 
@@ -319,11 +322,11 @@
     <div class="cover">
         <ul>
             <li><a href="#main">INTRO</a></li>
-            <li><a href="#portfolio01">PROJECT01 - FINGER SUIT</a></li>
-            <li><a href="#portfolio02">PROJECT02 - CREVERSE</a></li>
-            <li><a href="#portfolio03">PROJECT03 - ETUDE</a></li>
-            <li><a href="#portfolio04">PROJECT04 - EGGDROP</a></li>
-            <li><a href="#portfolio05">PROJECT05 - SPAO</a></li>
+            <li><a href="#portfolio01">PROJECT 01 - FINGER SUIT</a></li>
+            <li><a href="#portfolio02">PROJECT 02 - CREVERSE</a></li>
+            <li><a href="#portfolio03">PROJECT 03 - ETUDE</a></li>
+            <li><a href="#portfolio04">PROJECT 04 - EGGDROP</a></li>
+            <li><a href="#portfolio05">PROJECT 05 - SPAO</a></li>
             <li><a href="#profile">PROFILE</a></li>
         </ul>
     </div>
