--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="content_bg">
                     <div class="content">
                         <div class="case">
-                            <a href=""><img src="./images/fingersuit_design.png" alt=""></a>
+                            <a href=""><img src="./images/fingersuit_design.png" alt="hyj_fingersuit"></a>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="https://emilyyujeong.github.io/fingersuit">VIEW ON WEB</a>
+                        <a href="https://emilyyujeong.github.io/fingersuit" target='_blank'>VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -103,7 +103,7 @@
                 <div class="content_bg">
                     <div class="content">
                         <div class="case">
-                            <a href=""><img src="./images/creverse.png" alt=""></a>
+                            <a href=""><img src="./images/creverse.png" alt="hyj_creverse"></a>
                         </div>
                     </div>
                     <div class="mo_bg">
@@ -137,7 +137,7 @@
                         </dl>
                     </div>
                     <div class="btn">
-                        <a href="https://emilyyujeong.github.io/react_test01/">VIEW ON WEB</a>
+                        <a href="https://emilyyujeong.github.io/react_test01/" target='_blank'>VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -149,7 +149,7 @@
                 <div class="content_bg">
                     <div class="content">
                         <div class="case">
-                            <a href=""><img src="./images/etude.png" alt=""></a>
+                            <a href=""><img src="./images/etude.png" alt="hyj_etude"></a>
                         </div>
                     </div>
                     <div class="mo_bg">
@@ -183,7 +183,7 @@
                         </dl>
                     </div>
                     <div class="btn">
-                        <a href="https://emilyyujeong.github.io/re_etude/">VIEW ON WEB</a>
+                        <a href="https://emilyyujeong.github.io/re_etude/" target='_blank'>VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -194,7 +194,7 @@
                 <div class="content_bg">
                     <div class="content">
                         <div class="case">
-                            <a href=""><img src="./images/eggdrop.png" alt=""></a>
+                            <a href=""><img src="./images/eggdrop.png" alt="hyj_eggdrop"></a>
                         </div>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="http://onewaytomars.dothome.co.kr/">VIEW ON WEB</a>
+                        <a href="http://onewaytomars.dothome.co.kr/" target='_blank'>VIEW ON WEB</a>
                     </div>
 
                 </div>
@@ -233,7 +233,7 @@
                 <div class="content_bg">
                     <div class="content">
                         <div class="case">
-                            <a href=""><img src="./images/spao.png" alt=""></a>
+                            <a href=""><img src="./images/spao.png" alt="hyj_spao"></a>
                         </div>
                     </div>
                     <div class="mo_bg">
@@ -267,7 +267,7 @@
                         </dl>
                     </div>
                     <div class="btn ">
-                        <a href="http://emilyyujeong.dothome.co.kr/?device=pc">VIEW ON WEB</a>
+                        <a href="http://emilyyujeong.dothome.co.kr/?device=pc" target='_blank'>VIEW ON WEB</a>
                     </div>
 
                 </div>
