--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
                 <div class="content_bg">
                     <div class="content">
                         <div class="case">
-                            <a href=""><img src="./images/fingersuit_design.png" alt="hyj_fingersuit"></a>
+                            <a href=""><img src="./images/fg.png" alt="hyj_etude"></a>
+                        </div>
+                    </div>
+                    <div class="mo_bg">
+                        <div class="mo_content">
+                            <div class="mo_case">
+                                <a href=""><img src="./images/fg_mo.png" alt=""></a>
+                            </div>
                         </div>
                     </div>
                 </div>
