--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>Standard Web</dd>
+                            <dd>Responsive Web</dd>
                             <dt>Tool</dt>
                             <dd>Vanilla Javascript, Swiper.js</dd>
                             <dt>Font</dt>
