--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </div>
     </main>
     <footer class="footer">
-        &copy; hanyujeong 2023 portfolio.
+        DESIGNED BY HANYUJEONG
     </footer>
 
     <div class="cover">
@@ -343,9 +343,8 @@
     <div class="mopen">
         <button>open</button>
     </div>
-
     <div class="toTop">
-        <a href="#main">UP</a>
+        <a href="#main"><i class="xi-angle-up"></i></a>
     </div>
 
 </body>
