--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="content_bg">
                     <div class="content">
                         <div class="case">
-                            <a href=""><img src="./images/creverse.png" alt="hyj_creverse"></a>
+                            <a href=""><img src="./images/creverse02.png" alt="hyj_creverse"></a>
                         </div>
                     </div>
                     <div class="mo_bg">
@@ -302,7 +302,7 @@
                         <li>HTML5 / CSS3</li>
                         <li>JAVA SCRIPT / JQUERY</li>
                         <li>REACT.JS</li>
-                        <li>CMS - 그누보드,영카트</li>
+                        <li>CMS - 그누보드</li>
                         <li>Photoshop / Figma</li>
                     </ul>
                 </div>
@@ -329,7 +329,7 @@
     <div class="cover">
         <ul>
             <li><a href="#main">INTRO</a></li>
-            <li><a href="#portfolio01">PROJECT 01 - FINGER SUIT</a></li>
+            <li><a href="#portfolio01">PROJECT 01 - FINGERSUIT</a></li>
             <li><a href="#portfolio02">PROJECT 02 - CREVERSE</a></li>
             <li><a href="#portfolio03">PROJECT 03 - ETUDE</a></li>
             <li><a href="#portfolio04">PROJECT 04 - EGGDROP</a></li>
