--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@
                     </div>
                 </div>
                 <div class="description">
+                    <button class="mark">
+                        <span class="span-mother">
+                            <span>M</span>
+                            <span>O</span>
+                            <span>B</span>
+                            <span>I</span>
+                            <span>L</span>
+                            <span>E</span>
+                        </span>
+                        <span class="span-mother2">
+                            <span>M</span>
+                            <span>O</span>
+                            <span>B</span>
+                            <span>I</span>
+                            <span>L</span>
+                            <span>E</span>
+                        </span>
+                    </button>
                     <strong>PROJECT 01</strong>
                     <h2><img src="./images/logo_fingersuit.svg" alt=""> <span>핑거수트</span></h2>
                     <div class="txt_row">
@@ -93,8 +111,15 @@
                                 <span class="color c03"></span>
                                 <span class="color c04"></span>
                             </dd>
-                            <dt>work</dt>
+                            <dt>Work</dt>
                             <dd>개인작업 100%</dd>
+                            <dt>Info</dt>
+                            <dd class="desc">
+                                브랜드 자체의 모던하고 세련된 이미지를 살리기 위해
+                                </br> 모노톤의 색상을 사용하였습니다.
+                                </br> 또한 슬라이드를 적용하여 여러가지 상품이 최대한 많이
+                                </br> 노출될 수 있도록 디자인 하였습니다.
+                            </dd>
                         </dl>
                     </div>
                     <div class="btn ">
@@ -116,12 +141,14 @@
                     <div class="mo_bg">
                         <div class="mo_content">
                             <div class="mo_case">
-                                <a href=""><img src="./images/creverse_mo.png" alt=""></a>
+                                <a href=""><img src="./images/mo_crev02.png" alt=""></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="description">
+                    <div class="circle">
+                    </div>
                     <strong>PROJECT 02</strong>
                     <h2><img src="./images/logo_creverse.svg" alt=""> <span>크레버스 - 융합사고력 플랫폼</span></h2>
                     <div class="txt_row">
@@ -141,6 +168,13 @@
                             </dd>
                             <dt>work</dt>
                             <dd>개인작업 100%</dd>
+                            <dt>Info</dt>
+                            <dd class="desc">
+                                아동, 청소년 교육 서비스의 컨셉에 맞게
+                                </br> 밝고 높은 채도의 색감과 캐릭터를 활용하였습니다.
+                                </br> 또한 섹션을 뚜렷하게 나누어
+                                </br> 효율적으로 정보를 전달 할 수 있도록 노력했습니다.
+                            </dd>
                         </dl>
                     </div>
                     <div class="btn">
@@ -167,7 +201,24 @@
                         </div>
                     </div>
                 </div>
-                <div class="description">
+                <div class="description"> <button class="mark">
+                        <span class="span-mother">
+                            <span>M</span>
+                            <span>O</span>
+                            <span>B</span>
+                            <span>I</span>
+                            <span>L</span>
+                            <span>E</span>
+                        </span>
+                        <span class="span-mother2">
+                            <span>M</span>
+                            <span>O</span>
+                            <span>B</span>
+                            <span>I</span>
+                            <span>L</span>
+                            <span>E</span>
+                        </span>
+                    </button>
                     <strong>PROJECT 03</strong>
                     <h2><img src="./images/logo_etude.png" alt=""> <span>에뛰드하우스 - 아모레퍼시픽</span></h2>
                     <div class="txt_row">
@@ -187,6 +238,13 @@
                             </dd>
                             <dt>Work</dt>
                             <dd>개인작업 100%</dd>
+                            <dt>Info</dt>
+                            <dd class="desc">
+                                브랜드의 대표 색상인 핑크를 활용해
+                                </br> 전반적으로 밝고 아기자기한 분위기를 조성하였습니다.
+                                </br> 다양한 형태의 슬라이드와 레이아웃을 활용해
+                                </br> 사용자에게 흥미를 유도할 수 있게 구성하였습니다.
+                            </dd>
                         </dl>
                     </div>
                     <div class="btn">
@@ -225,6 +283,14 @@
                             </dd>
                             <dt>Work</dt>
                             <dd>개인작업 100%</dd>
+                            <dt>Info</dt>
+                            <dd class="desc">
+                                그누보드를 사용하여 메인페이지와 서브페이지를 제작하였습니다.
+                                </br> 다단메뉴로 구성해 사이트 내 서비스들을
+                                </br> 쉽게 볼 수 있도록 표시 했고
+                                </br> 또한 섹션을 뚜렷하게 나누어
+                                </br> 효율적으로 정보를 전달 할 수 있도록 노력했습니다.
+                            </dd>
                         </dl>
                     </div>
                     <div class="btn ">
@@ -252,6 +318,24 @@
                     </div>
                 </div>
                 <div class="description">
+                    <button class="mark">
+                        <span class="span-mother">
+                            <span>M</span>
+                            <span>O</span>
+                            <span>B</span>
+                            <span>I</span>
+                            <span>L</span>
+                            <span>E</span>
+                        </span>
+                        <span class="span-mother2">
+                            <span>M</span>
+                            <span>O</span>
+                            <span>B</span>
+                            <span>I</span>
+                            <span>L</span>
+                            <span>E</span>
+                        </span>
+                    </button>
                     <strong>PROJECT 05</strong>
                     <h2><img src="./images/logo_spao.png" alt=""> <span>SPA 대표 브랜드 스파오 공식몰</span></h2>
                     <div class="txt_row">
@@ -259,7 +343,7 @@
                             <dt>Type</dt>
                             <dd>Responsive Web</dd>
                             <dt>Tool</dt>
-                            <dd>CMS(그누보드), Javascript(JQuery)</dd>
+                            <dd>CMS(영카트), Javascript(JQuery)</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -271,6 +355,12 @@
                             </dd>
                             <dt>Work</dt>
                             <dd>개인작업 100%</dd>
+                            <dt>Info</dt>
+                            <dd class="desc">
+                                영카트를 사용하여 메인페이지와 서브페이지를 제작한 쇼핑몰입니다.
+                                </br> 다양한 상품의 홍보가 중요한 쇼핑몰 특성에 맞추어
+                                </br> 메뉴 디자인과 레이아웃을 최대한 심플하게 제작하였습니다.
+                            </dd>
                         </dl>
                     </div>
                     <div class="btn ">
